# chess-data-analytics

./: .gitignore  README.md  games.csv.example  pyproject.toml
sample_games/: custom.html  draw.html  otb_example.pgn  win-loss.html
src/chess_data_analytics/: __init__.py  analytics.py  browser.py  cli.py  config.py  database.py  parser.py
tests/: test_parser.py
